package mode.strategyMode;

/**
 * @Author ws
 * @Date 2021/5/27 10:43
 */
public interface TravelStrategy {
    void travelMode();
}
