@startuml
interface TravelStrategy {
    void travelMode();
}
class TravelByAirStrategy implements TravelStrategy{

    public void travelMode();
}
class TravelByCarStrategy implements TravelStrategy{
    public void travelMode() ;
}
class Context {
    private TravelStrategy travelStrategy;
    public void travelMode();
}
Context o-- TravelStrategy
class Main{}
Main ..> Context
@enduml